# esp-sdmmc-experiment

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
